src/test/ui/rfc-2632-const-trait-impl/feature-gate.stock.stderr
error[E0658]: const trait impls are experimental
  --> $DIR/feature-gate.rs:9:6
   |
LL | impl const T for S {}
   |      ^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable

error: const trait impls are not yet implemented
  --> $DIR/feature-gate.rs:9:1
   |
LL | impl const T for S {}
   | ^^^^^-----^^^^^^^^^^^
   |      |
   |      const because of this

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
